Fix z-index issue with inline select

--- a/src/js/components/Form/Form.scss
+++ b/src/js/components/Form/Form.scss
@@ -77,6 +77,11 @@
 
     & > div, & > div > div {
       max-width: 100%;
+      z-index: 101;
+
+      *::after {
+        box-sizing: initial;
+      }
     }
   }
 
